fix media-query where links are not visible on ipad

--- a/client/src/landing/landing.css
+++ b/client/src/landing/landing.css
@@ -48,7 +48,7 @@
 
 
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .logo {
     margin-left: 25px !important;
   }
